deleted redundant comment routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
     <aside>
       <h2>Login</h2>
     </aside>
-    <div class="gallery">
+    <div class="Mainpage">
       {{{body}}}
     </div>
   </main>
