--- a/views/ownerPets.handlebars
+++ b/views/ownerPets.handlebars
@@ -1,10 +1,10 @@
-{{{each pets as |pet|}}}
+{{#each pets as |pet|}}
   <div class="col-md-4">
     <div class="card mb-4 shadow-sm">
-      <img class="card-img-top" src="{{pet.image}}" alt="Card image cap">
+      <img class="card-img-top" src="{{pet.pet_image_url}}" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">{{pet.name}}</h5>
-        <p class="card-text">{{pet.description}}</p>
+        <h5 class="card-title">{{pet.pet_name}}</h5>
+        <p class="card-text">{{pet.pet_description}}</p>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
             <a href="/pets/{{pet.id}}" class="btn btn-sm btn-outline-secondary">View</a>
@@ -15,7 +15,7 @@
       </div>
     </div>
   </div>
-{{{else}}}
+{{else}}
   <div class="col-md-12">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
