--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://bulma.io">
-    {{!-- logo image --}}
+      {{!-- logo image --}}
       <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
     </a>
 
@@ -25,32 +25,48 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
+      <a href="/" class="navbar-item">
         Home
       </a>
 
-      <a class="navbar-item">
-        Documentation
+      <a href="/blogs/all" class="navbar-item">
+        Pawesome Community
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
+        <a href="/blogs/cats/all" class="navbar-link">
+          Cats Community
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
+          <a href="/blogs/cats/funny" class="navbar-item">
+            Funny Stories
           </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
+          <a href="/blogs/cats/advice" class="navbar-item">
+            Advice
           </a>
           <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
+          <a href="/blogs/cats/all" class="navbar-item">
+            All Cat Posts
+          </a>
+        </div>
+      </div>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a href="/blogs/dogs/all" class="navbar-link">
+          Dogs Community
+        </a>
+
+        <div class="navbar-dropdown">
+          <a href="/blogs/dogs/funny" class="navbar-item">
+            Funny Stories
+          </a>
+          <a href="/blogs/dogs/advice" class="navbar-item">
+            Advice
+          </a>
+          <hr class="navbar-divider">
+          <a href="/blogs/dogs/all" class="navbar-item">
+            All Dog Posts
           </a>
         </div>
       </div>
@@ -58,36 +74,35 @@
 
     <div class="navbar-end">
       <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
 
-  {{#if loggedIn}}
-          <a class="button is-light">
+        {{#if logged_in}}
+        <div class="buttons">
+          <a id="logout" href="/logout" class="button is-primary">
             Log out
           </a>
-
-  {{else}}
-
-          <a class="button is-light">
+        </div>
+        {{else}}
+        <div class="buttons">
+          <a href="/login" class="button is-primary">
+            <strong>Sign up</strong>
+          </a>
+          <a href="/login" class="button is-light">
             Log in
           </a>
-  {{/if}}
-
         </div>
+        {{/if}}
+
       </div>
     </div>
-  </div>
 </nav>
-    <div class="Mainpage">
-      {{{body}}}
-    </div>
-  </main>
-  {{!-- {{#if loggedIn}} --}}
-  {{!-- script for homepage/main page functionality --}}
-  {{!-- <script src="/js/logout.js"></script> --}}
-  {{!-- {{/if}} --}}
+<div class="Mainpage">
+  {{{body}}}
+</div>
+</main>
+{{#if logged_in}}
+{{!-- script for homepage/main page functionality --}}
+<script src="/js/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
