--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-warning" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+    <a class="navbar-item" href="http://localhost:8080/pets">
       {{!-- logo image --}}
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      <img src="/img/pawsome_care_logo.png" alt="pawsome_care_logo" width="112" height="30" class="logo">
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
