--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
-<nav class="navbar has-background-warning" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-warning is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="http://localhost:8080/pets">
       {{!-- logo image --}}
