--- a/views/blog-one.handlebars
+++ b/views/blog-one.handlebars
@@ -1,49 +1,28 @@
 <div class="">
     <div class="">
-        <h2>Dumb Cat Moment </h2>
+        <h2>{{blogPosts.title}}</h2>
     </div>
     <div class="">
-        <h4>Category: Cats</h4>
-        <h4>Type: Funny</h4>
+        <h4>Category: {{blogPosts.pet_category}}</h4>
+        <h4>Type: {{blogPosts.post_type}}</h4>
         {{!-- not sure how to get user name from userID yet --}}
-        <h3>User: user1</h3>
-        <p>When cat do silly thing i go haha </p>
+        <h3>User: username {{blogPosts.user_id}}</h3>
+        <p>{{blogPosts.body}} </p>
     </div>
     <div class="">
         <h3>Comments</h3>
+        {{!-- not sure if correct yet --}}
+        {{#each blogPosts.comments as |comment|}}
         {{!-- maybe make this a helper function? --}}
-        <div>
-            <h4>username2 </h3>
-                <h3>body of comment hhaha</h3>
-                <h2>date created</h2>
-        </div>
-
-    </div>
-</div>
-
-{{!-- {{#each blogPosts as |post| }}
-<div class="">
-    <div class="">
-        <h2>{{title}}</h2>
-    </div>
-    <div class="">
-        <h4>Category: {{pet_category}}</h4>
-        <h4>Type: {{post_type}}</h4>
-        not sure how to get user name from userID yet
-        <h3>User: {{}}</h3>
-        <p>{{body}}</p>
-    </div>
-    <div class="">
-        <h3>Comments</h3>
-        not sure if correct yet
-        {{#each post.comments as |comment|}}
-        maybe make this a helper function?
-        username
-        body of comment
-        date created
+        <h3>User: {{user_id}} username</h3>
+        <h3>{{comment}}</h3>
+        <h4>{{format_time date_created}}</h4>
+        {{else}}
+        <h4>No Comments Yet</h4>
+        {{!-- date created --}}
         {{/each}}
     </div>
 </div>
-{{/each}} --}}
+
 
 <script src="./js/blogPost-one.js"></script>
