--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,5 +3,8 @@
     height: auto;
     max-width: 100%;
     max-height: 100%;
-  }
+}
 
+.signup-column {
+    margin-top: 4rem; /* Adjust the margin as needed */
+}
