--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
+  {{!-- <div class="card-image">
+    {{!-- <figure class="image is-4by3">
       {{!--  Image upload; how to save images to mysql database for use?<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> --}}
-    </figure>
+    </figure> --}} --}}
   </div>
   <div class="card-content">
     <div class="media">
@@ -12,13 +12,19 @@
         </figure>
       </div>
       <div class="media-content">
-        {{!-- pet name --}}
-        {{!-- pet type --}}
+        <p class="title is-4">{{pets.pet_name}}</p>
+        <p class="subtitle is-6">{{pets.pet_breed}}</p>
       </div>
     </div>
-
     <div class="content">
-        {{!-- animal information handlebar --}}
+        <p>{{pets.pet_description}}</p>
+        <p>{{pets.pet_age}}</p>
+        <p>{{pets.pet_size}}</p>
+        <p>{{pets.pet_allergies}}</p>
+        <p>{{pets.pet_medications}}</p>
+        <p>{{pets.pet_exercise}}</p>
+        <p>{{pets.pet_food}}</p>
+        <p>{{pets.pet_grooming}}</p>
     </div>
   </div>
 </div>
