--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,42 +1,60 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered is-vcentered is-multiline">
+      <div class="column is-half-desktop is-full-tablet">
+        <h2 class="title is-4 has-text-centered">Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <form class="login-form">
+          <div class="field">
+            <label class="label" for="email-login">Email:</label>
+            <div class="control">
+              <input class="input" type="text" id="email-login" />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label" for="password-login">Password:</label>
+            <div class="control">
+              <input class="input" type="password" id="password-login" />
+            </div>
+          </div>
+          <div class="field">
+            <div class="control has-text-centered">
+              <button class="button is-primary" type="submit">Login</button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+      <div class="column is-half-desktop is-full-tablet ">
+        <h2 class="title is-4 has-text-centered signup-column">Signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <form class="signup-form">
+          <div class="field">
+            <label class="label" for="name-signup">Name:</label>
+            <div class="control">
+              <input class="input" type="text" id="name-signup" />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label" for="email-signup">Email:</label>
+            <div class="control">
+              <input class="input" type="text" id="email-signup" />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label" for="password-signup">Password:</label>
+            <div class="control">
+              <input class="input" type="password" id="password-signup" />
+            </div>
+          </div>
+          <div class="field">
+            <div class="control has-text-centered">
+              <button class="button is-primary" type="submit">Signup</button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
+    </div>
   </div>
-</div>
+</section>
 
 <script src="./js/login-signup.js"></script>
