--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,38 +34,38 @@
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a href="/blogs/cats/all" class="navbar-link">
+        <a href="/blogs/Cats/all" class="navbar-link">
           Cats Community
         </a>
 
         <div class="navbar-dropdown">
-          <a href="/blogs/cats/funny" class="navbar-item">
-            Funny Stories
-          </a>
-          <a href="/blogs/cats/advice" class="navbar-item">
+          <a href="/blogs/Cats/Advice" class="navbar-item">
             Advice
           </a>
+          <a href="/blogs/Cats/Funny" class="navbar-item">
+            Funny Stories
+          </a>
           <hr class="navbar-divider">
-          <a href="/blogs/cats/all" class="navbar-item">
+          <a href="/blogs/Cats/all" class="navbar-item">
             All Cat Posts
           </a>
         </div>
       </div>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a href="/blogs/dogs/all" class="navbar-link">
+        <a href="/blogs/Dogs/all" class="navbar-link">
           Dogs Community
         </a>
 
         <div class="navbar-dropdown">
-          <a href="/blogs/dogs/funny" class="navbar-item">
-            Funny Stories
-          </a>
-          <a href="/blogs/dogs/advice" class="navbar-item">
+          <a href="/blogs/Dogs/Advice" class="navbar-item">
             Advice
           </a>
+          <a href="/blogs/Dogs/Funny" class="navbar-item">
+            Funny Stories
+          </a>
           <hr class="navbar-divider">
-          <a href="/blogs/dogs/all" class="navbar-item">
+          <a href="/blogs/Dogs/all" class="navbar-item">
             All Dog Posts
           </a>
         </div>
