--- a/views/blogs-all.handlebars
+++ b/views/blogs-all.handlebars
@@ -1,6 +1,6 @@
 <div>
-    <h2>Make a post!</h2>
-    <form>
+    <h2 id="user-id" data-user-id="{{user_id}}">Make a post!</h2>
+    <form class="post-form">
         <div class="field">
             <label class="label" for="new-title">Title:</label>
             <div class="control">
