--- a/views/ownerPets.handlebars
+++ b/views/ownerPets.handlebars
@@ -1,40 +1,44 @@
 <div class="columns is-centered">
+  <a href="/Add-A-Pet">
+    <button class="button is-large is-fullwidth is-outlined is-warning">Add a Pet</button>
+  </a>
   {{#each pets as |pet|}}
-    <div class="column is-4">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-4by3">
-            <img src="{{pet.pet_image_url}}" alt="Card image">
-          </figure>
+  <div class="column is-4">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="{{pet.pet_image_url}}" alt="Card image">
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-5">{{pet.pet_name}}</p>
+            <p class="subtitle is-6">{{pet.pet_description}}</p>
+          </div>
         </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <p class="title is-5">{{pet.pet_name}}</p>
-              <p class="subtitle is-6">{{pet.pet_description}}</p>
-            </div>
+        <div class="content">
+          <div class="buttons">
+            {{!-- need to change /edit or take away link and build link into JS --}}
+            <a href="/pets/{{pet.id}}" class="button is-small is-link">View</a>
+            <a href="/pets/{{pet.id}}/edit" class="button is-small is-link">Edit</a>
           </div>
-          <div class="content">
-            <div class="buttons">
-              {{!-- need to change /edit or take away link and build link into JS --}}
-              <a href="/pets/{{pet.id}}" class="button is-small is-link">View</a>
-              <a href="/pets/{{pet.id}}/edit" class="button is-small is-link">Edit</a>
-            </div>
-            <small class="has-text-grey">{{pet.updatedAt}}</small>
-          </div>
+          <small class="has-text-grey">{{pet.updatedAt}}</small>
         </div>
       </div>
     </div>
-    
+  </div>
+
   {{else}}
-    <div class="column is-4">
-      <div class="card">
-        <div class="card-content">
-          <h5 class="title is-5">No Pets</h5>
-          <p class="subtitle is-6">You have no pets. <a href="/login">Add a pet</a> to get started.</p>
-        </div>
+  <div class="column is-4">
+    <div class="card">
+      <div class="card-content">
+        <h5 class="title is-5">No Pets</h5>
+        <p class="subtitle is-6">You have no pets. <a href="/login">Add a pet</a> to get started.</p>
       </div>
     </div>
+  </div>
   {{/each}}
-  <button class="button is-large is-fullwidth is-outlined is-warning">Add a Pet</button>
+
+
 </div>
