--- a/views/blogs-all.handlebars
+++ b/views/blogs-all.handlebars
@@ -31,6 +31,19 @@
                 </select>
             </div>
         </div>
+        <div class="file">
+            <label class="file-label">
+                <input class="file-input" type="file" name="resume">
+                <span class="file-cta">
+                    <span class="file-icon">
+                        <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label">
+                        Upload a picture
+                    </span>
+                </span>
+            </label>
+        </div>
         <div class="field">
             <div class="control has-text-centered">
                 <button class="button is-primary" type="submit">Post</button>
