--- a/views/petSignUp.handlebars
+++ b/views/petSignUp.handlebars
@@ -1,59 +1,58 @@
 {{!-- check boxes for certain fields in req body, everything else string/integer based on model --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Name">
+  <input class="input" type="text" placeholder="Pet Name" name="petName">
 </div>
 {{!-- dropdown box for pet type - cat/dog --}}
 <div>
-    <select>
-        <option value="dog">Dog</option>
-        <option value="cat">Cat</option>
-    </select>
+  <select name="petType">
+    <option value="dog">Dog</option>
+    <option value="cat">Cat</option>
+  </select>
 </div>
 {{!-- pet breed --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Breed">
+  <input class="input" type="text" placeholder="Pet Breed" name="petBreed">
 </div>
 {{!-- pet age --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Age">
+  <input class="input" type="text" placeholder="Pet Age" name="petAge">
 </div>
 {{!-- pet description, larger text area --}}
 <div class="control">
-  <textarea class="textarea" placeholder="Pet Description"></textarea>
+  <textarea class="textarea" placeholder="Pet Description" name="petDescription"></textarea>
 </div>
-{{!-- pet image upload leave empty for now --}}
 {{!-- pet size dropdown with options, small, medium, large --}}
 <div>
-    <select>
-        <option value="small">Small</option>
-        <option value="medium">Medium</option>
-        <option value="large">Large</option>
-    </select>
+  <select name="petSize">
+    <option value="small">Small</option>
+    <option value="medium">Medium</option>
+    <option value="large">Large</option>
+  </select>
 </div>
 {{!-- pet allergies --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Allergies">
+  <input class="input" type="text" placeholder="Pet Allergies" name="petAllergies">
 </div>
 {{!-- pet medications --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Medications">
+  <input class="input" type="text" placeholder="Pet Medications" name="petMedication">
 </div>
 {{!-- pet exercise --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Exercise">
-  </div>
+  <input class="input" type="text" placeholder="Pet Exercise" name="petExercise">
+</div>
 {{!-- pet food --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Food">
+  <input class="input" type="text" placeholder="Pet Food" name="petFood">
 </div>
 {{!-- pet grooming --}}
 <div class="control">
-  <input class="input" type="text" placeholder="Pet Grooming">
+  <input class="input" type="text" placeholder="Pet Grooming" name="petGrooming">
 </div>
 {{!--  pet image upload --}}
 <div class="file">
   <label class="file-label">
-    <input class="file-input" type="file" name="resume">
+    <input class="file-input" type="file" name="petImage">
     <span class="file-cta">
       <span class="file-icon">
         <i class="fas fa-upload"></i>
@@ -66,7 +65,7 @@
 </div>
 {{!-- submit button that handles all text area --}}
 <div class="control">
-  <button class="button is-primary">Submit</button>
+  <button class="button is-primary" id="submitButton">Submit</button>
 </div>
 {{!-- script for sign up --}}
 <script src="/js/petSignUp.js"></script>
