--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -103,6 +103,13 @@
 {{!-- script for homepage/main page functionality --}}
 <script src="/js/logout.js"></script>
 {{/if}}
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>Pawesome Care</strong> by <a href="https://jgthms.com">Zeina Hares, Michael McCabe and Adam Day</a>. Proud members of the Dog and Cat Spotting Society
+    </p>
+  </div>
+</footer>
 </body>
 
 </html>
