--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,3 +8,47 @@
 .signup-column {
     margin-top: 4rem; /* Adjust the margin as needed */
 }
+
+html,
+body {
+  height: 100%;
+}
+
+.Mainpage {
+  min-height: calc(100% - 6rem); /* Subtracting the height of the footer */
+  padding-bottom: 6rem; /* Height of the footer */
+  flex: 1;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  max-height: 20px;
+}
+
+#custom-container {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+
+.description {
+    max-height: 4.5em; /* Set a maximum height for the description */
+    overflow: hidden; /* Hide any overflowing content */
+    text-overflow: ellipsis; /* Add an ellipsis (...) to indicate truncated text */
+    -webkit-line-clamp: 3; /* Limit the number of lines to 3 */
+    -webkit-box-orient: vertical; /* Ensure vertical orientation */
+    display: -webkit-box; /* Display as a box with multiple lines */
+    font-size: 14px; /* Adjust the font size as desired */
+  }
+
+.add-pet-button-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    z-index: 1;
+  }
+  
