--- a/views/ownerPets.handlebars
+++ b/views/ownerPets.handlebars
@@ -1,42 +1,49 @@
-<div id="petList"class="columns is-centered">
-  <a href="/Add-A-Pet">
-    <button class="button is-large is-fullwidth is-outlined is-warning">Add a Pet</button>
-  </a>
-  {{#each pets as |pet|}}
-  <div class="column is-4">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="{{pet.pet_image_url}}" alt="Card image">
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-5">{{pet.pet_name}}</p>
-            <p class="subtitle is-6">{{pet.pet_description}}</p>
+<div class="container">
+  <div id="petList" class="columns is-multiline">
+    {{#each pets as |pet|}}
+      <div class="column is-4">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+              <img src="{{pet.pet_image_url}}" alt="Card image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title is-5">{{pet.pet_name}}</p>
+                <p class="subtitle is-6">{{pet.pet_description}}</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="buttons">
+                <a href="/pets/{{pet.id}}" class="button is-small is-link">View</a>
+                <button class="button is-small is-link petEdit" data-pet-id="{{pet.id}}">Edit</button>
+                <button class="button is-small is-danger petDelete" data-pet-id="{{pet.id}}">Delete</button>
+              </div>
+              <small class="has-text-grey">{{pet.updatedAt}}</small>
+            </div>
           </div>
         </div>
-        <div class="content">
-          <div class="buttons">
-            {{!-- need to change /edit or take away link and build link into JS --}}
-            <a href="/pets/{{pet.id}}" class="button is-small is-link">View</a>
-            <a href="/pets/edit/{{pet.id}}" class="button is-small is-link petEdit" data-pet-id="{{pet.id}}">Edit</a>
+      </div>
+    {{/each}}
+    {{#unless pets}}
+      <div class="column is-4">
+        <div class="card">
+          <div class="card-content">
+            <h5 class="title is-5">No Pets</h5>
+            <p class="subtitle is-6">You have no pets. <a href="/login">Add a pet</a> to get started.</p>
           </div>
-          <small class="has-text-grey">{{pet.updatedAt}}</small>
         </div>
       </div>
+    {{/unless}}
+  </div>
+  <div class="columns is-centered">
+    <div class="column is-4">
+      <a href="/Add-A-Pet">
+        <button class="button is-large is-fullwidth is-outlined is-warning">Add a Pet</button>
+      </a>
     </div>
   </div>
-  {{else}}
-  <div class="column is-4">
-    <div class="card">
-      <div class="card-content">
-        <h5 class="title is-5">No Pets</h5>
-        <p class="subtitle is-6">You have no pets. <a href="/login">Add a pet</a> to get started.</p>
-      </div>
-    </div>
-  </div>
-  {{/each}}
 </div>
 <script src="/js/userProfile.js"></script>
