--- a/views/petEdit.handlebars
+++ b/views/petEdit.handlebars
@@ -1,6 +1,20 @@
 {{!-- check boxes for certain fields in req body, everything else string/integer based on model --}}
+{{!-- pet id container to store pet id to retrieve --}}
+<div id="petIdContainer" data-pet-id={{pets.id}}></div>
+{{!-- pet name --}}
 <div class="control">
   <input class="input" type="text" value={{pets.pet_name}} name="petName">
+</div>
+<div>
+  <select name="petType">
+    {{#isEqual pets.pet_type "===" "dog"}}
+      <option value="dog" selected>Dog</option>
+      <option value="cat">Cat</option>
+    {{else}}
+      <option value="dog">Dog</option>
+      <option value="cat" selected>Cat</option>
+    {{/isEqual}}
+  </select>
 </div>
 {{!-- pet breed --}}
 <div class="control">
@@ -12,7 +26,7 @@
 </div>
 {{!-- pet description, larger text area --}}
 <div class="control">
-  <textarea class="textarea" value={{pets.pet_description}} name="petDescription"></textarea>
+  <textarea class="textarea" name="petDescription">{{pets.pet_description}}</textarea>
 </div>
 {{!-- pet size dropdown with options, small, medium, large --}}
 <div>
@@ -24,23 +38,23 @@
 </div>
 {{!-- pet allergies --}}
 <div class="control">
-  <input class="input" type="text" value={{pets.pet_allergies}} name="petAllergies">
+  <input class="input" type="text" value="{{pets.pet_allergies}}" name="petAllergies">
 </div>
 {{!-- pet medications --}}
 <div class="control">
-  <input class="input" type="text" value={{pets.pet_medications}} name="petMedication">
+  <input class="input" type="text" value="{{pets.pet_medication}}" name="petMedication">
 </div>
 {{!-- pet exercise --}}
 <div class="control">
-  <input class="input" type="text" value={{pets.pet_exercise}} name="petExercise">
+  <input class="input" type="text" name="petExercise" value="{{pets.pet_excercise}}">
 </div>
 {{!-- pet food --}}
 <div class="control">
-  <input class="input" type="text" value={{pets.pet_food}} name="petFood">
+  <input class="input" type="text" value="{{pets.pet_food}}" name="petFood">
 </div>
 {{!-- pet grooming --}}
 <div class="control">
-  <input class="input" type="text" {{pets.pet_food}} name="petGrooming">
+  <input class="input" type="text" value="{{pets.pet_grooming}}" name="petGrooming">
 </div>
 {{!--  pet image upload --}}
 <div class="file">
@@ -61,4 +75,4 @@
   <button class="button is-primary" id="submitButton">Submit</button>
 </div>
 {{!-- script for sign up --}}
-<script src="/js/petSignUp.js"></script>
+<script src="/js/petEdit.js"></script>
