updated design for edit page, added multer, styles css

--- a/views/petEdit.handlebars
+++ b/views/petEdit.handlebars
@@ -1,78 +1,141 @@
-{{!-- check boxes for certain fields in req body, everything else string/integer based on model --}}
-{{!-- pet id container to store pet id to retrieve --}}
-<div id="petIdContainer" data-pet-id={{pets.id}}></div>
-{{!-- pet name --}}
-<div class="control">
-  <input class="input" type="text" value={{pets.pet_name}} name="petName">
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <!-- check boxes for certain fields in req body, everything else string/integer based on model -->
+      <!-- pet id container to store pet id to retrieve -->
+      <div id="petIdContainer" data-pet-id="{{pets.id}}"></div>
+
+      <!-- pet name -->
+      <div class="field">
+        <label class="label">Pet Name</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_name}}" name="petName">
+        </div>
+      </div>
+
+      <!-- pet type -->
+      <div class="field">
+        <label class="label">Pet Type</label>
+        <div class="control">
+          <div class="select">
+            <select name="petType">
+              {{#isEqual pets.pet_type "===" "dog"}}
+              <option value="dog" selected>Dog</option>
+              <option value="cat">Cat</option>
+              {{else}}
+              <option value="dog">Dog</option>
+              <option value="cat" selected>Cat</option>
+              {{/isEqual}}
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- pet breed -->
+      <div class="field">
+        <label class="label">Pet Breed</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_breed}}" name="petBreed">
+        </div>
+      </div>
+
+      <!-- pet age -->
+      <div class="field">
+        <label class="label">Pet Age</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_age}}" name="petAge">
+        </div>
+      </div>
+
+      <!-- pet description, larger text area -->
+      <div class="field">
+        <label class="label">Pet Description</label>
+        <div class="control">
+          <textarea class="textarea" name="petDescription">{{pets.pet_description}}</textarea>
+        </div>
+      </div>
+
+      <!-- pet size dropdown with options, small, medium, large -->
+      <div class="field">
+        <label class="label">Pet Size</label>
+        <div class="control">
+          <div class="select">
+            <select name="petSize">
+              <option value="small">Small</option>
+              <option value="medium">Medium</option>
+              <option value="large">Large</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- pet allergies -->
+      <div class="field">
+        <label class="label">Pet Allergies</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_allergies}}" name="petAllergies">
+        </div>
+      </div>
+
+      <!-- pet medications -->
+      <div class="field">
+        <label class="label">Pet Medication</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_medication}}" name="petMedication">
+        </div>
+      </div>
+
+      <!-- pet exercise -->
+      <div class="field">
+        <label class="label">Pet Exercise</label>
+        <div class="control">
+          <input class="input" type="text" name="petExercise" value="{{pets.pet_excercise}}">
+        </div>
+      </div>
+
+      <!-- pet food -->
+      <div class="field">
+        <label class="label">Pet Food</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_food}}" name="petFood">
+        </div>
+      </div>
+
+      <!-- pet grooming -->
+      <div class="field">
+        <label class="label">Pet Grooming</label>
+        <div class="control">
+          <input class="input" type="text" value="{{pets.pet_grooming}}" name="petGrooming">
+        </div>
+      </div>
+
+      <!-- pet image upload -->
+      <div class="field">
+        <label class="label">Pet Image</label>
+        <div class="file">
+          <label class="file-label">
+            <input class="file-input" type="file" name="petImage">
+            <span class="file-cta">
+              <span class="file-icon">
+                <i class="fas fa-upload"></i>
+              </span>
+              <span class="file-label">
+                Upload a picture of your pet!
+              </span>
+            </span>
+          </label>
+        </div>
+      </div>
+
+      <!-- submit button that handles all text area -->
+      <div class="field">
+        <div class="control">
+          <button class="button is-primary" id="submitButton">Submit</button>
+        </div>
+      </div>
+
+      <!-- script for sign up -->
+      <script src="/js/petEdit.js"></script>
+    </div>
+  </div>
 </div>
-<div>
-  <select name="petType">
-    {{#isEqual pets.pet_type "===" "dog"}}
-      <option value="dog" selected>Dog</option>
-      <option value="cat">Cat</option>
-    {{else}}
-      <option value="dog">Dog</option>
-      <option value="cat" selected>Cat</option>
-    {{/isEqual}}
-  </select>
-</div>
-{{!-- pet breed --}}
-<div class="control">
-  <input class="input" type="text" value={{pets.pet_breed}} name="petBreed">
-</div>
-{{!-- pet age --}}
-<div class="control">
-  <input class="input" type="text" value={{pets.pet_age}} name="petAge">
-</div>
-{{!-- pet description, larger text area --}}
-<div class="control">
-  <textarea class="textarea" name="petDescription">{{pets.pet_description}}</textarea>
-</div>
-{{!-- pet size dropdown with options, small, medium, large --}}
-<div>
-  <select name="petSize">
-    <option value="small">Small</option>
-    <option value="medium">Medium</option>
-    <option value="large">Large</option>
-  </select>
-</div>
-{{!-- pet allergies --}}
-<div class="control">
-  <input class="input" type="text" value="{{pets.pet_allergies}}" name="petAllergies">
-</div>
-{{!-- pet medications --}}
-<div class="control">
-  <input class="input" type="text" value="{{pets.pet_medication}}" name="petMedication">
-</div>
-{{!-- pet exercise --}}
-<div class="control">
-  <input class="input" type="text" name="petExercise" value="{{pets.pet_excercise}}">
-</div>
-{{!-- pet food --}}
-<div class="control">
-  <input class="input" type="text" value="{{pets.pet_food}}" name="petFood">
-</div>
-{{!-- pet grooming --}}
-<div class="control">
-  <input class="input" type="text" value="{{pets.pet_grooming}}" name="petGrooming">
-</div>
-{{!--  pet image upload --}}
-<div class="file">
-  <label class="file-label">
-    <input class="file-input" type="file" name="petImage">
-    <span class="file-cta">
-      <span class="file-icon">
-        <i class="fas fa-upload"></i>
-      </span>
-      <span class="file-label">
-        Upload a picture of your pet!
-      </span>
-    </span>
-  </label>
-</div>
-{{!-- submit button that handles all text area --}}
-<div class="control">
-  <button class="button is-primary" id="submitButton">Submit</button>
-</div>
-{{!-- script for sign up --}}
-<script src="/js/petEdit.js"></script>
