--- a/views/petSignUp.handlebars
+++ b/views/petSignUp.handlebars
@@ -1,71 +1,132 @@
-{{!-- check boxes for certain fields in req body, everything else string/integer based on model --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Name" name="petName">
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <!-- Pet Name -->
+      <div class="field">
+        <label class="label">Pet Name</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Name" name="petName">
+        </div>
+      </div>
+
+      <!-- Pet Type -->
+      <div class="field">
+        <label class="label">Pet Type</label>
+        <div class="control">
+          <div class="select">
+            <select name="petType">
+              <option value="dog">Dog</option>
+              <option value="cat">Cat</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pet Breed -->
+      <div class="field">
+        <label class="label">Pet Breed</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Breed" name="petBreed">
+        </div>
+      </div>
+
+      <!-- Pet Age -->
+      <div class="field">
+        <label class="label">Pet Age</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Age" name="petAge">
+        </div>
+      </div>
+
+      <!-- Pet Description -->
+      <div class="field">
+        <label class="label">Pet Description</label>
+        <div class="control">
+          <textarea class="textarea" placeholder="Pet Description" name="petDescription"></textarea>
+        </div>
+      </div>
+
+      <!-- Pet Size -->
+      <div class="field">
+        <label class="label">Pet Size</label>
+        <div class="control">
+          <div class="select">
+            <select name="petSize">
+              <option value="small">Small</option>
+              <option value="medium">Medium</option>
+              <option value="large">Large</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pet Allergies -->
+      <div class="field">
+        <label class="label">Pet Allergies</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Allergies" name="petAllergies">
+        </div>
+      </div>
+
+      <!-- Pet Medications -->
+      <div class="field">
+        <label class="label">Pet Medications</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Medications" name="petMedication">
+        </div>
+      </div>
+
+      <!-- Pet Exercise -->
+      <div class="field">
+        <label class="label">Pet Exercise</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Exercise" name="petExercise">
+        </div>
+      </div>
+
+      <!-- Pet Food -->
+      <div class="field">
+        <label class="label">Pet Food</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Food" name="petFood">
+        </div>
+      </div>
+
+      <!-- Pet Grooming -->
+      <div class="field">
+        <label class="label">Pet Grooming</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Pet Grooming" name="petGrooming">
+        </div>
+      </div>
+
+      <!-- Pet Image Upload -->
+      <div class="field">
+        <label class="label">Pet Image Upload</label>
+        <div class="file">
+          <label class="file-label">
+            <input class="file-input" type="file" name="petImage">
+            <span class="file-cta">
+              <span class="file-icon">
+                <i class="fas fa-upload"></i>
+              </span>
+              <span class="file-label">
+                Upload a picture of your pet!
+              </span>
+            </span>
+          </label>
+        </div>
+      </div>
+
+      <!-- Submit Button -->
+      <div class="field">
+        <div class="control">
+          <button class="button is-primary" id="submitButton">Submit</button>
+        </div>
+      </div>
+
+      <!-- Script for sign up -->
+      <script src="/js/petSignUp.js"></script>
+    </div>
+  </div>
 </div>
-{{!-- dropdown box for pet type - cat/dog --}}
-<div>
-  <select name="petType">
-    <option value="dog">Dog</option>
-    <option value="cat">Cat</option>
-  </select>
-</div>
-{{!-- pet breed --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Breed" name="petBreed">
-</div>
-{{!-- pet age --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Age" name="petAge">
-</div>
-{{!-- pet description, larger text area --}}
-<div class="control">
-  <textarea class="textarea" placeholder="Pet Description" name="petDescription"></textarea>
-</div>
-{{!-- pet size dropdown with options, small, medium, large --}}
-<div>
-  <select name="petSize">
-    <option value="small">Small</option>
-    <option value="medium">Medium</option>
-    <option value="large">Large</option>
-  </select>
-</div>
-{{!-- pet allergies --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Allergies" name="petAllergies">
-</div>
-{{!-- pet medications --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Medications" name="petMedication">
-</div>
-{{!-- pet exercise --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Exercise" name="petExercise">
-</div>
-{{!-- pet food --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Food" name="petFood">
-</div>
-{{!-- pet grooming --}}
-<div class="control">
-  <input class="input" type="text" placeholder="Pet Grooming" name="petGrooming">
-</div>
-{{!--  pet image upload --}}
-<div class="file">
-  <label class="file-label">
-    <input class="file-input" type="file" name="petImage">
-    <span class="file-cta">
-      <span class="file-icon">
-        <i class="fas fa-upload"></i>
-      </span>
-      <span class="file-label">
-        Upload a picture of your pet!
-      </span>
-    </span>
-  </label>
-</div>
-{{!-- submit button that handles all text area --}}
-<div class="control">
-  <button class="button is-primary" id="submitButton">Submit</button>
-</div>
-{{!-- script for sign up --}}
-<script src="/js/petSignUp.js"></script>
